<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>The bringup package</description>
  <maintainer email="jan@huenermann.de">Jan Hünermann</maintainer>
  <license>TODO</license>
  
  <!-- repo -->
  <url type="website">http://github.com/janhuenermann/EE4308-project</url>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>draw</build_depend>
  <build_depend>drone</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>local_planner</build_depend>
  <build_depend>mission_planner</build_depend>
  <build_depend>slam</build_depend>
  <exec_depend>draw</exec_depend>
  <exec_depend>drone</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>local_planner</exec_depend>
  <exec_depend>mission_planner</exec_depend>
  <exec_depend>slam</exec_depend>
</package>
