<?xml version="1.0"?>
<package format="2">
  <!-- name and maintainers -->
  <name>drone</name>
  <version>0.0.1</version>
  <description>The drone package</description>
  <maintainer email="jan@huenermann.de">Jan Hünermann</maintainer>
  <license>TODO</license>
  
  <!-- repo -->
  <url type="website">http://github.com/janhuenermann/EE4308-project</url>

  <!-- dependencies -->
  <build_depend>drone_ekf</build_depend>
  <build_depend>math</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>drone_ekf</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
