<?xml version="1.0"?>
<package format="2">
  <name>global_planner</name>
  <version>0.0.0</version>
  <description>The global_planner package</description>
  <maintainer email="jan@huenermann.de">Jan Hünermann</maintainer>
  <license>TODO</license>
  
  <!-- repo -->
  <url type="website">http://github.com/janhuenermann/EE4308-project</url>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>math</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
