<?xml version="1.0"?>
<package format="2">
  <name>math</name>
  <version>0.0.0</version>
  <description>The math package</description>
  <maintainer email="jan@huenermann.de">Jan Hünermann</maintainer>
  <license>TODO</license>
  
  <!-- repo -->
  <url type="website">http://github.com/janhuenermann/EE4308-project</url>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
